--- a/SonarBot/appsettings.Development.json
+++ b/SonarBot/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "GitHub": {
+    "Server": "",
+    "Token": ""
   }
-}
+  SonarQube": {
+  "Server": "",
+  "Token": ""
+
+} }
+// Parameters :
+
+//GitHub__Token=<Github Pat that has access to status,pr and issues>
+//GitHub__Server=<Github Server name like TownSuite>
+//SonarQube__Token=<SonarQube token that has access as admin>
+//SonarQube__Server=<SonarQube Server name like TownSuite.Sonar.com>
