--- a/SonarBot/appsettings.Development.json
+++ b/SonarBot/appsettings.Development.json
@@ -17,6 +17,6 @@
 // Parameters :
 
 //GitHub__Token=<Github Pat that has access to status,pr and issues>
-//GitHub__Server=<Github Server name like TownSuite>
+//GitHub__Server=<Github user name like racoolhub>
 //SonarQube__Token=<SonarQube token that has access as admin>
 //SonarQube__Server=<SonarQube Server name like TownSuite.Sonar.com>
